{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 25,
  "lineage": "605d7f98-4c11-8eda-bca8-3b87016886ae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Ahmed-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04069d1851c201ad1",
            "association_id": "eipassoc-0a3fc1a99752ae11d",
            "domain": "vpc",
            "id": "eipalloc-04069d1851c201ad1",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-06b01a632989ad6ad",
            "private_dns": "ip-10-0-0-156.eu-west-1.compute.internal",
            "private_ip": "10.0.0.156",
            "public_dns": "ec2-54-73-12-180.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.73.12.180",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "This is the NAT gateway elastic IP"
            },
            "tags_all": {
              "Name": "This is the NAT gateway elastic IP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.Ahmed-IGW",
            "aws_vpc.Ahmed-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AhmedEC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ca3fed11864d6bb",
            "arn": "arn:aws:ec2:eu-west-1:385543032329:instance/i-07cd1e1628fe8e0c7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07cd1e1628fe8e0c7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "My first EC2 instance",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01aefbcf7386deaba",
            "private_dns": "ip-172-31-20-35.eu-west-1.compute.internal",
            "private_ip": "172.31.20.35",
            "public_dns": "ec2-34-255-124-156.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.255.124.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04bf2cd0a2d2ec2e3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d4b5f2f6684cfff",
            "tags": {
              "Name": "Task instance"
            },
            "tags_all": {
              "Name": "Task instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05f906b92eea2ccc9"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Ahmed-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385543032329:internet-gateway/igw-0bf4560d7dda56b0b",
            "id": "igw-0bf4560d7dda56b0b",
            "owner_id": "385543032329",
            "tags": {
              "Name": "This is the main internet gateway"
            },
            "tags_all": {
              "Name": "This is the main internet gateway"
            },
            "vpc_id": "vpc-027d057ff91c3aef3"
          },
          "dependencies": [
            "aws_vpc.Ahmed-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Ahmed-NAT-GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04069d1851c201ad1",
            "connectivity_type": "public",
            "id": "nat-0b420fb7ccbe56e31",
            "network_interface_id": "eni-06b01a632989ad6ad",
            "private_ip": "10.0.0.156",
            "public_ip": "54.73.12.180",
            "subnet_id": "subnet-077eac55b9edfddbd",
            "tags": {
              "Name": "This is the main NAT gateway in puplic subnet1"
            },
            "tags_all": {
              "Name": "This is the main NAT gateway in puplic subnet1"
            }
          },
          "dependencies": [
            "aws_eip.Ahmed-EIP",
            "aws_internet_gateway.Ahmed-IGW",
            "aws_subnet.Ahmed-puplic-subnet1",
            "aws_vpc.Ahmed-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Ahmed-private-PURE-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385543032329:route-table/rtb-0e7905fd76abe77b2",
            "id": "rtb-0e7905fd76abe77b2",
            "owner_id": "385543032329",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "This is the private PURE route table"
            },
            "tags_all": {
              "Name": "This is the private PURE route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-027d057ff91c3aef3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Ahmed-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Ahmed-private-table1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385543032329:route-table/rtb-006c51d2b9b00f7f7",
            "id": "rtb-006c51d2b9b00f7f7",
            "owner_id": "385543032329",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b420fb7ccbe56e31",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "This is the private route table1"
            },
            "tags_all": {
              "Name": "This is the private route table1"
            },
            "timeouts": null,
            "vpc_id": "vpc-027d057ff91c3aef3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.Ahmed-NAT-GW",
            "aws_vpc.Ahmed-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Ahmed-private-table2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385543032329:route-table/rtb-07059293ead2feb0c",
            "id": "rtb-07059293ead2feb0c",
            "owner_id": "385543032329",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b420fb7ccbe56e31",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "This is the private route table2"
            },
            "tags_all": {
              "Name": "This is the private route table2"
            },
            "timeouts": null,
            "vpc_id": "vpc-027d057ff91c3aef3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.Ahmed-NAT-GW",
            "aws_vpc.Ahmed-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Ahmed-puplic-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385543032329:route-table/rtb-0890623f30cb94c45",
            "id": "rtb-0890623f30cb94c45",
            "owner_id": "385543032329",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bf4560d7dda56b0b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "This is the puplic route table for our two subnets"
            },
            "tags_all": {
              "Name": "This is the puplic route table for our two subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-027d057ff91c3aef3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Ahmed-IGW",
            "aws_vpc.Ahmed-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Ahmed-private-PURE-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8295656f530a878",
            "route_table_id": "rtb-0e7905fd76abe77b2",
            "subnet_id": "subnet-01344ecef23699ba4"
          },
          "dependencies": [
            "aws_route_table.Ahmed-private-PURE-table",
            "aws_subnet.Ahmed-private-PURE1",
            "aws_vpc.Ahmed-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Ahmed-private-PURE-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5c9cdf7ba99d5b3",
            "route_table_id": "rtb-0e7905fd76abe77b2",
            "subnet_id": "subnet-011f72db82410c9a8"
          },
          "dependencies": [
            "aws_route_table.Ahmed-private-PURE-table",
            "aws_subnet.Ahmed-private-PURE2",
            "aws_vpc.Ahmed-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Ahmed-private-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015073fa366140467",
            "route_table_id": "rtb-006c51d2b9b00f7f7",
            "subnet_id": "subnet-06e3b22442c1e8e72"
          },
          "dependencies": [
            "aws_vpc.Ahmed-VPC",
            "aws_eip.Ahmed-EIP",
            "aws_internet_gateway.Ahmed-IGW",
            "aws_nat_gateway.Ahmed-NAT-GW",
            "aws_route_table.Ahmed-private-table1",
            "aws_subnet.Ahmed-private-subnet1",
            "aws_subnet.Ahmed-puplic-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Ahmed-private-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a896823209bbb019",
            "route_table_id": "rtb-07059293ead2feb0c",
            "subnet_id": "subnet-027a0c4566acb2eed"
          },
          "dependencies": [
            "aws_subnet.Ahmed-puplic-subnet1",
            "aws_vpc.Ahmed-VPC",
            "aws_eip.Ahmed-EIP",
            "aws_internet_gateway.Ahmed-IGW",
            "aws_nat_gateway.Ahmed-NAT-GW",
            "aws_route_table.Ahmed-private-table2",
            "aws_subnet.Ahmed-private-subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Ahmed-public-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d83f7c32bbfc197",
            "route_table_id": "rtb-0890623f30cb94c45",
            "subnet_id": "subnet-077eac55b9edfddbd"
          },
          "dependencies": [
            "aws_internet_gateway.Ahmed-IGW",
            "aws_route_table.Ahmed-puplic-table",
            "aws_subnet.Ahmed-puplic-subnet1",
            "aws_vpc.Ahmed-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Ahmed-public-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b0ab0f33b59ef48",
            "route_table_id": "rtb-0890623f30cb94c45",
            "subnet_id": "subnet-0ea605b8a49d4d9b3"
          },
          "dependencies": [
            "aws_subnet.Ahmed-puplic-subnet2",
            "aws_vpc.Ahmed-VPC",
            "aws_internet_gateway.Ahmed-IGW",
            "aws_route_table.Ahmed-puplic-table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Ahmed-private-PURE1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385543032329:subnet/subnet-01344ecef23699ba4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-01344ecef23699ba4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "385543032329",
            "tags": {
              "Name": "PURE subnet1 in availability zone eu-west-1a"
            },
            "tags_all": {
              "Name": "PURE subnet1 in availability zone eu-west-1a"
            },
            "vpc_id": "vpc-027d057ff91c3aef3"
          },
          "dependencies": [
            "aws_vpc.Ahmed-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Ahmed-private-PURE2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385543032329:subnet/subnet-011f72db82410c9a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-011f72db82410c9a8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "385543032329",
            "tags": {
              "Name": "PURE subnet2 in availability zone eu-west-1b"
            },
            "tags_all": {
              "Name": "PURE subnet2 in availability zone eu-west-1b"
            },
            "vpc_id": "vpc-027d057ff91c3aef3"
          },
          "dependencies": [
            "aws_vpc.Ahmed-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Ahmed-private-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385543032329:subnet/subnet-06e3b22442c1e8e72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-06e3b22442c1e8e72",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "385543032329",
            "tags": {
              "Name": "This is the private subnet1 in availability zone eu-west-1a"
            },
            "tags_all": {
              "Name": "This is the private subnet1 in availability zone eu-west-1a"
            },
            "vpc_id": "vpc-027d057ff91c3aef3"
          },
          "dependencies": [
            "aws_vpc.Ahmed-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Ahmed-private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385543032329:subnet/subnet-027a0c4566acb2eed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-027a0c4566acb2eed",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "385543032329",
            "tags": {
              "Name": "This is the private subnet2 in availability zone eu-west-1b"
            },
            "tags_all": {
              "Name": "This is the private subnet2 in availability zone eu-west-1b"
            },
            "vpc_id": "vpc-027d057ff91c3aef3"
          },
          "dependencies": [
            "aws_vpc.Ahmed-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Ahmed-puplic-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385543032329:subnet/subnet-077eac55b9edfddbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-077eac55b9edfddbd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "385543032329",
            "tags": {
              "Name": "This is the puplic subnet1 in availability zone eu-west-1a"
            },
            "tags_all": {
              "Name": "This is the puplic subnet1 in availability zone eu-west-1a"
            },
            "vpc_id": "vpc-027d057ff91c3aef3"
          },
          "dependencies": [
            "aws_vpc.Ahmed-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Ahmed-puplic-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385543032329:subnet/subnet-0ea605b8a49d4d9b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ea605b8a49d4d9b3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "385543032329",
            "tags": {
              "Name": "This is the puplic subnet2 in availability zone eu-west-1b"
            },
            "tags_all": {
              "Name": "This is the puplic subnet2 in availability zone eu-west-1b"
            },
            "vpc_id": "vpc-027d057ff91c3aef3"
          },
          "dependencies": [
            "aws_vpc.Ahmed-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Ahmed-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:385543032329:vpc/vpc-027d057ff91c3aef3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-037a6afdd17f714a4",
            "default_route_table_id": "rtb-0d74946917ce106f6",
            "default_security_group_id": "sg-01a4570b04417095b",
            "dhcp_options_id": "dopt-0e8d1836675c64314",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-027d057ff91c3aef3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d74946917ce106f6",
            "owner_id": "385543032329",
            "tags": {
              "Name": "This is the main VPC"
            },
            "tags_all": {
              "Name": "This is the main VPC"
            }
          }
        }
      ]
    }
  ]
}